--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,159 @@ engine: ejs
 current: index
 ---
 
-<h1>
-  這是一段話
-</h1>
+<div class="px-4-5">
+  <div class="d-flex justify-content-between pt-4-5 pb-4-5">
+    <div class="d-flex ">
+      <h4 class="me-5 fw-bold">Assignment</h4>
+      <form>
+        <select class="form-select border-0 fw-bold" role="button" aria-label="Default select example">
+          <option selected>All Courses</option>
+        </select>
+      </form>
+    </div>
+    <div>
+      <a href="#"><span class="material-symbols-outlined me-4">
+        search
+      </span></a>
+      <a href="#"><span class="material-symbols-outlined">
+        notifications_active
+      </span></a>
+    </div>
+  </div>
+  <div class="d-flex justify-content-between align-items-center">
+    <form>
+      <select class="form-select border-0 fw-bold" role="button" aria-label="Default select example">
+        <option selected>All(4)</option>
+      </select>
+    </form>
+    <p class="fsz-12px">2 comments</p>
+  </div>
+  <div class="d-flex justify-content-between">
+    <div class="card h-50" style="width: 30%;">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item gray-100">
+          <div class="d-flex justify-content-between">
+            <p class="mb-1 fsz-12px">Chapter Assignment 2</p>
+            <p class="mb-1 fsz-12px">4 hrs ago</p>
+          </div>
+          <div class="d-flex justify-content-between align-items-center">
+            <p class="mb-1 fw-bold">Please check this file…</p>
+            <p class="mb-1 fsz-12px text-black-50">Emily Wang</p>
+          </div>
+        </li>
+        <li class="list-group-item">
+          <div class="d-flex justify-content-between">
+            <p class="mb-1 fsz-12px">Chapter Assignment 1</p>
+            <p class="mb-1 fsz-12px">12 hrs ago</p>
+          </div>
+          <div class="d-flex justify-content-between align-items-center">
+            <p class="mb-1 fw-bold">My Homework</p>
+            <p class="mb-1 fsz-12px text-black-50">David Xu</p>
+          </div>
+        </li>
+        <li class="list-group-item">
+          <div class="d-flex justify-content-between">
+            <p class="mb-1 fsz-12px">Final Assignment</p>
+            <p class="mb-1 fsz-12px">18 hrs ago</p>
+          </div>
+          <div class="d-flex justify-content-between align-items-center">
+            <p class="mb-1 fw-bold">Have a problem with this…</p>
+            <p class="mb-1 fsz-12px text-black-50">Tony Wei</p>
+          </div>
+        </li>
+        <li class="list-group-item">
+          <div class="d-flex justify-content-between">
+            <p class="mb-1 fsz-12px">Final Assignment</p>
+            <p class="mb-1 fsz-12px">19 hrs ago</p>
+          </div>
+          <div class="d-flex justify-content-between align-items-center">
+            <p class="mb-1 fw-bold">Did I do it right?</p>
+            <p class="mb-1 fsz-12px text-black-50">Christina Lin</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div class="card ms-3 mb-3" style="width:70%;">
+      <div class="card-header d-flex justify-content-between align-items-center">
+        <div>
+          <p class="mb-1 fsz-12px">Chapter Assignment 2 / HTML&CSS</p>
+          <p class="mb-0 fw-bold">Please check this file for me, thanks!</p>
+        </div>
+        <a href="#">
+          <span class="material-symbols-outlined fw-bold">
+            more_vert
+          </span>
+        </a>
+      </div>
+      <div class="card-body d-flex">
+        <a href="#">
+          <div class="w-40 h-40 overflow-hidden bg rounded-circle me-3"
+            style="background-image: url('assets/images/emilywang.jpeg');"></div>
+        </a>
+        <div class="border-bottom">
+          <a href="#" class="fw-bold mb-1">Emily Wang</a>
+          <span class="fsz-12px text-black-50 d-flex mb-3">10:38 AM (4 hours ago)</span>
+          <p class="card-text fsz-14px mb-3 pe-4-5">Hi Teacher, the attached file is my homework of chapter 2. And here
+            comes a question: Why in the following code the height of the <span class="text-success">div</span> is
+            bigger than the height of the <span class="text-success">img</span> ? There is a gap below the image, but it
+            doesn’t seems to be a padding/margin.<br /> What is the gap or extra space below image?</p>
+          <a href="#" class="btn btn-light btn-outline-secondary mb-3 fw-bold text-dark">
+            <span class="material-symbols-outlined align-middle fw-bold">
+              attach_file
+            </span>
+            HW-2-David.zip
+          </a>
+        </div>
+      </div>
+      <div class="card-body d-flex">
+        <a href="#">
+          <div class="w-40 h-40 overflow-hidden bg rounded-circle me-3"
+            style="background-image: url('assets/images/andychen.jpeg');"></div>
+        </a>
+        <div>
+          <div class="d-flex justify-content-between align-items-center">
+            <div>
+              <a href="#" class="fw-bold mb-1">Andy Chen (You)</a>
+              <span class="fsz-12px text-black-50 d-flex mb-3">13:24 AM (1 hours ago)</span>
+            </div>
+            <div>
+              <a href="#"><span class="material-symbols-outlined me-4">
+                  grade
+                </span></a>
+              <a href="#"><span class="material-symbols-rounded">
+                  edit
+                </span></a>
+            </div>
+          </div>
+          <p class="card-text">Hi David, by default, an image is rendered inline, like a letter so it sits on the same
+            line that a, b, c and d sit on. There is space below that line for the descenders you find on letters like
+            g, j, p and q. <br /><br />
+            You can: <br /><br />
+            　• adjust the <span class="text-success">vertical-align</span> of the image to position it elsewhere (e.g.
+            the <span class="text-success">middle</span> ) or
+            <br /> 　• change the <span class="text-success">display</span> so it isn’t inline.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="d-flex justify-content-between align-items-center" style="width:69%;margin-left: auto;">
+    <div>
+      <a href="#">
+        <span class="material-symbols-rounded me-3">
+          chevron_left
+        </span>
+      </a>
+      <a href="#">
+        <span class="material-symbols-rounded">
+          navigate_next
+        </span>
+      </a>
 
-<div class="box"></div>
+    </div>
+    <div>
+      <button type="button" class="btn btn-outline-success bt-padding me-3">Mark as read</button>
+      <button type="button" class="btn btn-success bt-padding">Reply</button>
+    </div>
+  </div>
+</div>
